[ADD] navbar left and add font

--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>دیوار</title>
 </head>
+
 <body>
 
-        <div class="nav-bar">
-            <div class="nav-bar_right">
-                <ul>
-                    <li>دیوار من</li>
-                    <li>چت</li>
-                    <li>پشتیبانی</li>
-                    <li>ثبت آگهی</li>
-                </ul>
-            </div>
-            <div class="nav-bar_left"></div>
-
+    <div class="nav-bar">
+        <div class="nav-bar-left">
+            <ul>
+                <li ><a class="btn" href="#">ثبت آگهی</a></li>
+                <li><a href="#">پشتیبانی</a></li>
+                <li><a href="#">چت</a></li>
+                <li><a href="#">دیوار من</a></li>
+            </ul>
         </div>
-
-
-
-        
-        <div class="main">
-            <div class="content"></div>
-            <div class="menu"></div>
-        </div>
-
+        <div class="nav-bar-right"></div>
+    </div>
 </body>
+
 </html>
