--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
                 <li><a href="#">دیوار من</a></li>
             </ul>
         </div>
-        <div class="nav-bar-right"></div>
+
+        <div class="nav-bar-right">
+            <input class="search_in" type="search" placeholder="جستجو در همه آگهی ها">
+            <div class="nav-bar-right-buttons">
+                <a href="#">تهران</a>
+            <a href="#">دسته ها</a>     
+            <hr class="kt-divider">
+            </div>
+            
+        </div>
+
     </div>
 </body>
 
