[ADD] menu and ads layout

--- a/index.html
+++ b/index.html
@@ -15,27 +15,79 @@
         <!-- nav-bar-left -->
         <div class="nav-bar-left">
             <ul>
-                <li ><a class="btn" href="#">ثبت آگهی</a></li>
+                <li><a class="btn" href="#">ثبت آگهی</a></li>
                 <li><a href="#">پشتیبانی</a></li>
                 <li><a href="#">چت</a></li>
                 <li><a href="#">دیوار من</a></li>
             </ul>
         </div>
-        
+
         <!-- nav-bar-center -->
         <div class="nav-bar-center">
             <input class="search_in" type="search" placeholder="جستجو در همه آگهی ها">
         </div>
-        
+
         <!-- nav-bar-right -->
         <div class="nav-bar-right">
-            <a href="#" class="categories">دسته ها</a>   
-            <a href="#" class="place">تهران</a>                                 
+            <a href="#" class="categories">دسته ها</a>
+            <a href="#" class="place">تهران</a>
             <hr class="kt-divider">
             <img src="image/logo-divar.svg" alt="logo-divar" class="logo-divar">
         </div>
 
     </div>
+
+    <!-- main -->
+    <div class="main">
+        <!-- menu -->
+        <div class="menu"></div>
+
+        <!-- ads -->
+        <div class="ads">
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+        </div>
+    </div>
+
 </body>
 
 </html>
