[ADD] menu links

--- a/index.html
+++ b/index.html
@@ -40,10 +40,66 @@
     <!-- main -->
     <div class="main">
         <!-- menu -->
-        <div class="menu"></div>
+        <div class="menu">
+            <div><h2>دسته ها</h2></div>
+            
+            <a href="#">املاک</a>
+            <a href="#">وسایل نقلیه</a>
+            <a href="#">کالای دیجیتال</a>
+            <a href="#">خانه و آشپزخانه</a>
+            <a href="#">خدمات</a>
+            <a href="#">وسایل شخصی</a>
+            <a href="#">سرگرمی و فراغت</a>
+            <a href="#">اجتماعی</a>
+            <a href="#">تجهیزات و صنعتی</a>
+            <a href="#">استخدام و  کاریابی</a>
+            <a href="#">رزومه کارجویان <span>(جدید) </span></a>
+            <hr>
+            <a class="mps" href="#">محل</a>
+            <hr>
+            <a class="mps" href="#">قیمت</a>
+            <hr>
+            <a class="mps" href="#">وضعیت آگهی</a>
+            <hr>
+
+            <div class="menu-links">
+                <ul>
+                    <li>دربارهً دیوار</li>
+                    <li>دریافت برنامه</li>
+                    <li>اتاق خبر</li>
+                    <li>کسب و کارها</li>
+                    <li>پشتیبانی و قوانین</li>
+                </ul>
+            </div>
+        </div>
 
         <!-- ads -->
         <div class="ads">
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
+            <div class="ad"></div>
             <div class="ad"></div>
             <div class="ad"></div>
             <div class="ad"></div>
