[ADD] icon location and ad designed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
         <!-- nav-bar-right -->
         <div class="nav-bar-right">
             <a href="#" class="categories">دسته ها</a>
-            <a href="#" class="place">تهران</a>
+            <div>
+                <i class="fas fa-map-marker-alt"></i>
+                <a href="#" class="place">تهران</a>
+            </div>
+            
             <hr class="kt-divider">
             <img src="image/logo-divar.svg" alt="logo-divar" class="logo-divar">
         </div>
@@ -75,34 +79,217 @@
 
         <!-- ads -->
         <div class="ads">
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
-            <div class="ad"></div>
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                </div>
+            </div>
+
+            <div class="ad">
+                <div class="ad-left">
+                    <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
+                </div>
+                <div class="ad-right">
+                    <h2>آپارتمان 62 متری  </h2>
+
+                    <p>ودیعه: 150 میلیون تومان</p>
+                    <p>اجاره: 8 میلیون تومان</p>
+                    <p>لحظاتی پیش در افسریه</p>
+                    
+
+                </div>
+            </div>
+
 
         </div>
     </div>
