[ADD] menu logos

--- a/index.html
+++ b/index.html
@@ -52,27 +52,22 @@
                 <i class="fa fa-home float-right" aria-hidden="true"></i>
                 <a href="#">املاک</a>
             </div>
-
             <div>
                 <i class="fas fa-car float-right" aria-hidden="true"></i>
                 <a href="#">وسایل نقلیه</a>
             </div>
-
             <div>
                 <i class="fas fa-mobile-alt float-right" aria-hidden="true"></i>
                 <a href="#">کالای دیجیتال</a>
             </div>
-
             <div>
                 <i class="fas fa-coffee float-right" aria-hidden="true"></i>
                 <a href="#">خانه و آشپزخانه</a>
             </div>
-
             <div>
                 <i class="fa fa-wrench float-right" aria-hidden="true"></i>
                 <a href="#">خدمات</a>
             </div>
-
             <div>
                 <i class="fas fa-user-tie float-right" aria-hidden="true"></i>
                 <a href="#">وسایل شخصی</a>
@@ -81,12 +76,10 @@
                 <i class="fas fa-gamepad float-right" aria-hidden="true"></i>
                 <a href="#">سرگرمی و فراغت</a>
             </div>
-
             <div>
                 <i class="fas fa-users float-right" aria-hidden="true"></i>
                 <a href="#">اجتماعی</a>
             </div>
-
             <div>
                 <i class="fas fa-tools float-right" aria-hidden="true"></i>
                 <a href="#">تجهیزات و صنعتی</a>
@@ -117,6 +110,19 @@
                     <li>پشتیبانی و قوانین</li>
                 </ul>
             </div>
+            <div class="social-icons">
+                <img src="image/twitter.svg" alt="twitter">
+                <img src="image/instagram.svg" alt="instagram">
+                <img src="image/linkedin.svg" alt="linkedin">
+                <img src="image/aparat.svg" alt="aparat">
+            </div>
+
+            <div class="logos">
+                <img src="image/img_eNAMAD.png" alt="img_eNAMAD">
+                <img src="image/img_etehadiye.png" alt="img_etehadiye">
+                <img src="image/img_samandehi.png" alt="img_samandehi">
+            </div>
+        
         </div>
 
         <!-- ads -->
