--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <ul>
                 <li><a class="btn" href="#">ثبت آگهی</a></li>
                 <li><a href="#">پشتیبانی</a></li>
-                <li><a href="#">چت</a></li>
-                <li><a href="#">دیوار من</a></li>
+                <li><a href="#">چت<i class="fas fa-comment"></i></a></li>
+                <li><a href="#">دیوار من<i class="fas fa-user-alt"></i></a></li>
             </ul>
         </div>
 
@@ -31,8 +31,8 @@
         <div class="nav-bar-right">
             <a href="#" class="categories">دسته ها</a>
             <div>
-                <i class="fas fa-map-marker-alt"></i>
-                <a href="#" class="place">تهران</a>
+                
+                <a href="#" class="place">تهران<i class="fas fa-map-marker-alt"></i></a>
             </div>
 
             <hr class="kt-divider">
@@ -111,10 +111,10 @@
                 </ul>
             </div>
             <div class="social-icons">
-                <img src="image/twitter.svg" alt="twitter">
-                <img src="image/instagram.svg" alt="instagram">
-                <img src="image/linkedin.svg" alt="linkedin">
-                <img src="image/aparat.svg" alt="aparat">
+                <img src="image/twitter.svg" alt="twitter" title="دیوار در توییتر">
+                <img src="image/instagram.svg" alt="instagram" title="دیوار در اینستاگرام">
+                <img src="image/linkedin.svg" alt="linkedin" title="دیوار در لینکدین">
+                <img src="image/aparat.svg" alt="aparat" title="دیوار در آپارات">
             </div>
 
             <div class="logos">
