--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
         <!-- nav-bar-center -->
         <div class="nav-bar-center">
+            <i class="fa fa-home float-right" aria-hidden="true"></i>
             <input class="search_in" type="search" placeholder="جستجو در همه آگهی ها">
         </div>
 
@@ -127,6 +128,7 @@
 
         <!-- ads -->
         <div class="ads">
+            <p>دیوار تهران - نیازمندی‌ های رایگان، آگهی‌های خرید، فروش نو و دست دوم و کارکرده، استخدام و خدمات</p>
             <div class="ad">
                 <div class="ad-left">
                     <img class="ad-left-img" src="image/pic_01.webp" alt="pic_-1">
