--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
         <!-- nav-bar-center -->
         <div class="nav-bar-center">
-            <i class="fa fa-home float-right" aria-hidden="true"></i>
+            
             <input class="search_in" type="search" placeholder="جستجو در همه آگهی ها">
+            <i class="fa fa-search" aria-hidden="true"></i>
         </div>
 
         <!-- nav-bar-right -->
